--- a/parallelCoordinates/index.html
+++ b/parallelCoordinates/index.html
@@ -5,5 +5,6 @@
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script src="pc.js"></script>
 </head>
-	<div id = "vis" display = "inline-block"></div>
+	<div id = "visContainer">
+	</div>
 </html>
