Add scatter plot

--- a/parallelCoordinates/index.html
+++ b/parallelCoordinates/index.html
@@ -1,10 +1,14 @@
-<html>
-<head>
-	<title> Parallel Coordinates </title>
-	<meta charset = "UTF-8">
-	<script src="https://d3js.org/d3.v6.min.js"></script>
-	<script src="pc.js"></script>
-</head>
-	<div id = "vis" display = "inline-block">
-	</div>
-</html>
+<html> 
+	<head> 
+	<meta charset = "UTF-8"> 
+	<title> Counter Crime </title> 
+	</head> 
+	
+	<div> 
+	<a href="base/index.html">Parallel Coordinates</a> 
+	</div> 
+
+	<div> 
+	<a href="germain/index.html">Scatter plot</a> (Germain) 
+	</div> 
+</html> 
