Change folder organization

--- a/parallelCoordinates/index.html
+++ b/parallelCoordinates/index.html
@@ -1,14 +1,14 @@
-<html> 
-	<head> 
-	<meta charset = "UTF-8"> 
-	<title> Counter Crime </title> 
-	</head> 
-	
-	<div> 
-	<a href="base/index.html">Parallel Coordinates</a> 
-	</div> 
+<html>
+	<head>
+	<meta charset = "UTF-8">
+	<title> Counter Crime </title>
+	</head>
 
-	<div> 
-	<a href="germain/index.html">Scatter plot</a> (Germain) 
-	</div> 
-</html> 
+	<div>
+	<a href="paralleCoordinates/index.html">Parallel Coordinates</a>
+	</div>
+
+	<div>
+	<a href="projection/index.html">Scatter plot</a> (Germain)
+	</div>
+</html>
