--- a/parallelCoordinates/index.html
+++ b/parallelCoordinates/index.html
@@ -11,4 +11,8 @@
 	<div>
 	<a href="projection/index.html">Scatter plot</a> (Germain)
 	</div>
+
+	<div>
+		<a href="lines/index.html">Line plot (possibly)</a> 
+	</div>
 </html>
