--- a/parallelCoordinates/lines/index.html
+++ b/parallelCoordinates/lines/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title> Line Plot! </title>
+	<title> Random transition </title>
 	<meta charset = "UTF-8">
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script src="./draw.js"></script> 
