--- a/parallelCoordinates/index.html
+++ b/parallelCoordinates/index.html
@@ -2,6 +2,7 @@
 	<head>
 	<meta charset = "UTF-8">
 	<title> Counter Crime </title>
+	<link rel = "icon" type = "image/svg" href = "./favicon.svg"></link> 
 	</head>
 
 	<div>
@@ -13,6 +14,6 @@
 	</div>
 
 	<div>
-		<a href="lines/index.html">Line plot (possibly)</a> 
+		<a href="lines/index.html">Line plot (possibly)</a>
 	</div>
 </html>
