--- a/parallelCoordinates/lines/index.html
+++ b/parallelCoordinates/lines/index.html
@@ -3,8 +3,9 @@
 	<title> Random transition </title>
 	<meta charset = "UTF-8">
 	<script src="https://d3js.org/d3.v6.min.js"></script>
+	<link rel = "icon" type = "image/svg" href = "../favicon.svg"></link> 
 	<!-- <script src="./draw.js"></script> -->
-	<script src="./lines.js"></script> 
+	<script src="./lines.js"></script>
 </head>
 <body>
 	<div id="vis"></div>
